mobile updates, fixed textarea overflow

--- a/Modal.css
+++ b/Modal.css
@@ -241,6 +241,7 @@ textarea {
     position: absolute;
     resize: none;
     text-indent: 6px;
+    overflow: hidden;
     
 }
 
